Update Submit Paper & My Submissions connection