@@ -3,111 +3,112 @@ package com.webcrafters.confease_backend.service;
 import com.webcrafters.confease_backend.model.Keyword;
 import com.webcrafters.confease_backend.repository.KeywordRepository;
 import org.junit.jupiter.api.BeforeEach;
-import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
+import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 
 import static org.junit.jupiter.api.Assertions.*;
-import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.*;
 
 @ExtendWith(MockitoExtension.class)
-class KeywordServiceTest {
+public class KeywordServiceTest {
 
     @Mock
-    private KeywordRepository repository;
+    private KeywordRepository keywordRepository;
 
     @InjectMocks
-    private KeywordServiceImpl service;
+    private KeywordServiceImpl keywordService;
 
     private Keyword sampleKeyword;
 
     @BeforeEach
     void setUp() {
         sampleKeyword = new Keyword();
-        sampleKeyword.setKeyword_id(1);
-        sampleKeyword.setKeyword("Machine Learning");
+        sampleKeyword.setKeyword_id(1L);
+        sampleKeyword.setKeyword("Artificial Intelligence");
     }
 
     @Test
-    @DisplayName("Should return all keywords")
-    void getAllTest() {
-        when(repository.findAll()).thenReturn(List.of(sampleKeyword));
+    void getAll_ShouldReturnList() {
+        // Arrange
+        when(keywordRepository.findAll()).thenReturn(Arrays.asList(sampleKeyword));
 
-        List<Keyword> result = service.getAll();
+        // Act
+        List<Keyword> result = keywordService.getAll();
 
+        // Assert
         assertEquals(1, result.size());
-        assertEquals("Machine Learning", result.get(0).getKeyword());
-        verify(repository, times(1)).findAll();
+        assertEquals("Artificial Intelligence", result.get(0).getKeyword());
+        verify(keywordRepository, times(1)).findAll();
     }
 
     @Test
-    @DisplayName("Should find keyword by ID")
-    void getByIdSuccessTest() {
-        when(repository.findById(1)).thenReturn(Optional.of(sampleKeyword));
+    void getById_WhenFound_ShouldReturnKeyword() {
+        // Arrange
+        when(keywordRepository.findById(1L)).thenReturn(Optional.of(sampleKeyword));
 
-        Keyword result = service.getById(1);
+        // Act
+        Keyword result = keywordService.getById(1L);
 
+        // Assert
         assertNotNull(result);
-        assertEquals("Machine Learning", result.getKeyword());
+        assertEquals(1L, result.getKeyword_id());
+        verify(keywordRepository, times(1)).findById(1L);
     }
 
     @Test
-    @DisplayName("Should throw exception when keyword ID not found")
-    void getByIdFailTest() {
-        when(repository.findById(99)).thenReturn(Optional.empty());
+    void getById_WhenNotFound_ShouldThrowException() {
+        // Arrange
+        when(keywordRepository.findById(99L)).thenReturn(Optional.empty());
 
-        Exception exception = assertThrows(RuntimeException.class, () -> service.getById(99));
+        // Act & Assert
+        RuntimeException exception = assertThrows(RuntimeException.class, () -> {
+            keywordService.getById(99L);
+        });
+        
         assertTrue(exception.getMessage().contains("Data not found: 99"));
     }
 
     @Test
-    @DisplayName("Should create a new keyword")
-    void createTest() {
-        when(repository.save(any(Keyword.class))).thenReturn(sampleKeyword);
+    void create_ShouldSaveAndReturnKeyword() {
+        // Arrange
+        when(keywordRepository.save(any(Keyword.class))).thenReturn(sampleKeyword);
 
-        Keyword saved = service.create(new Keyword());
+        // Act
+        Keyword result = keywordService.create(new Keyword());
 
-        assertNotNull(saved);
-        assertEquals("Machine Learning", saved.getKeyword());
-        verify(repository, times(1)).save(any(Keyword.class));
+        // Assert
+        assertNotNull(result);
+        assertEquals("Artificial Intelligence", result.getKeyword());
+        verify(keywordRepository, times(1)).save(any(Keyword.class));
     }
 
     @Test
-    @DisplayName("Should update keyword successfully")
-    void updateSuccessTest() {
-        when(repository.existsById(1)).thenReturn(true);
-        when(repository.save(any(Keyword.class))).thenReturn(sampleKeyword);
+    void delete_WhenExists_ShouldCallDelete() {
+        // Arrange
+        when(keywordRepository.existsById(1L)).thenReturn(true);
+        doNothing().when(keywordRepository).deleteById(1L);
 
-        Keyword updated = service.update(1, sampleKeyword);
+        // Act
+        keywordService.delete(1L);
 
-        assertNotNull(updated);
-        verify(repository).existsById(1);
-        verify(repository).save(sampleKeyword);
+        // Assert
+        verify(keywordRepository, times(1)).deleteById(1L);
     }
 
     @Test
-    @DisplayName("Should delete keyword successfully")
-    void deleteSuccessTest() {
-        when(repository.existsById(1)).thenReturn(true);
+    void delete_WhenNotFound_ShouldThrowException() {
+        // Arrange
+        when(keywordRepository.existsById(88L)).thenReturn(false);
 
-        service.delete(1);
-
-        verify(repository, times(1)).deleteById(1);
-    }
-
-    @Test
-    @DisplayName("Should fail to delete if keyword does not exist")
-    void deleteFailTest() {
-        when(repository.existsById(1)).thenReturn(false);
-
-        assertThrows(RuntimeException.class, () -> service.delete(1));
-        verify(repository, never()).deleteById(anyInt());
+        // Act & Assert
+        assertThrows(RuntimeException.class, () -> keywordService.delete(88L));
+        verify(keywordRepository, never()).deleteById(anyLong());
     }
 }
